added footer at Home

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -57,6 +57,15 @@
         #sub {
             color: aquamarine;
         }
+        .footer-bs {
+            margin-top: 50px;
+        }
+        .foot {
+            display: block;
+            justify-content: center;
+            align-items: center;
+        }
+
     </style>
 </head>
 <body>
@@ -76,6 +85,18 @@
             click to get Github repo
         </a>
     </div>
+    <hr>
+    <footer class="footer-bs">
+
+        <div class="row">
+            <div class="foot">
+                <h6>Developed by- <span style="color: aqua">@AryanTapre</span> </h6>
+                © 2023. All rights reserved
+
+            </div>
+        </div>
+    </footer>
 </main>
+
 </body>
 </html>
