--- a/views/home.ejs
+++ b/views/home.ejs
@@ -91,11 +91,11 @@
         <div class="row">
             <div class="foot">
                 <h6>Developed by- <span style="color: aqua">@AryanTapre</span> </h6>
-                © 2023. All rights reserved
+                © 2024. All rights reserved
 
             </div>
         </div>
-    </footer>
+    </footer>cd 
 </main>
 
 </body>
